--- a/main.css
+++ b/main.css
@@ -1,47 +1,111 @@
-.dankmeme{
-  color: #00ff04;
-  display: inline;
+a:hover {
+    color: fuchsia;
+    text-decoration: underline;
 }
-body{
-  background-color: black;
+
+.menu1 {
+    position: fixed;
+    top: 30%;
+    margin-top: -2rem;
+    left: 0%;
+    margin-left: 1rem;
+}
+
+.menu2 {
+    position: fixed;
+    top: 33%;
+    margin-top: -2rem;
+    left: 0%;
+    margin-left: 1rem;
+}
+
+.england {
+    position: fixed;
+    top: 33%;
+    margin-top: -2rem;
+    left: 0%;
+    margin-left: 1rem;
+}
+
+.dankmeme {
+    color: #00ff04;
+    display: inline;
+}
+
+body {
+    background-color: black;
 }
 
 .rainbow {
-  color:rgba(100, 50, 255, .8);
-  font-size: 500%;
- /* Chrome, Safari, Opera */
--webkit-animation: rainbow 1s infinite; 
-
-/* Internet Explorer */
--ms-animation: rainbow 1s infinite;
-
-/* Standar Syntax */
-animation: rainbow 1s infinite; 
+    color: rgba(100, 50, 255, .8);
+    font-size: 500%;
+    /* Chrome, Safari, Opera */
+    -webkit-animation: rainbow 1s infinite;
+    /* Internet Explorer */
+    -ms-animation: rainbow 1s infinite;
+    /* Standar Syntax */
+    animation: rainbow 1s infinite;
 }
+
 
 /* Chrome, Safari, Opera */
-@-webkit-keyframes rainbow{
-  20%{color: red;}
-  40%{color: yellow;}
-  60%{color: green;}
-  80%{color: blue;}
-  100%{color: orange;}	
+
+@-webkit-keyframes rainbow {
+    20% {
+        color: red;
+    }
+    40% {
+        color: yellow;
+    }
+    60% {
+        color: green;
+    }
+    80% {
+        color: blue;
+    }
+    100% {
+        color: orange;
+    }
 }
+
+
 /* Internet Explorer */
-@-ms-keyframes rainbow{
-  20%{color: red;}
-  40%{color: yellow;}
-  60%{color: green;}
-  80%{color: blue;}
-  100%{color: orange;}	
+
+@-ms-keyframes rainbow {
+    20% {
+        color: red;
+    }
+    40% {
+        color: yellow;
+    }
+    60% {
+        color: green;
+    }
+    80% {
+        color: blue;
+    }
+    100% {
+        color: orange;
+    }
 }
+
 
 /* Standar Syntax */
-@keyframes rainbow{
-  20%{color: red;}
-  40%{color: yellow;}
-  60%{color: green;}
-  80%{color: blue;}
-  100%{color: orange;}	
-}
 
+@keyframes rainbow {
+    20% {
+        color: red;
+    }
+    40% {
+        color: yellow;
+    }
+    60% {
+        color: green;
+    }
+    80% {
+        color: blue;
+    }
+    100% {
+        color: orange;
+    }
+}
